--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ rp-pico = "0.5.0"
 panic-halt = "0.2.0"
 embedded-hal ="0.2.7"
 cortex-m-rt = "0.7.1" 
+defmt = "0.3.2"
+defmt-rtt = "0.3.2"
 
 [dev-dependencies]
 
