--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ embedded-hal ="0.2.7"
 cortex-m-rt = "0.7.1" 
 defmt = "0.3.2"
 defmt-rtt = "0.3.2"
+fugit = "0.3.6"
+rp2040-hal = "0.6.0"
 
 [dev-dependencies]
 
