--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ rp-pico = "0.5.0"
 panic-halt = "0.2.0"
 embedded-hal ="0.2.7"
 cortex-m-rt = "0.7.1" 
-
+fugit = "0.3.6"
+rp2040-hal = "0.6.0"
 [dev-dependencies]
 
 [features]
