--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rp2040-hal = "0.6.0"
 defmt = "0.3.2"
 defmt-rtt = "0.3.2"
 rp2040-monotonic = "1.1.0"
+systick-monotonic = "1.0.0"
 
 [dev-dependencies]
 
