--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 cortex-m-rtic = "1.1.3"
 cortex-m = "0.7.2"
 fugit = "0.3.6"
-rp2040-hal = "0.6.0"
-rp-pico = "0.5.0"
-#rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" , feature = "rp2040-hal/rtic-monotonic"}
-#rp-pico = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic"  }
+#rp2040-hal = "0.6.0"
+#rp-pico = "0.5.0"
+rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" , features = ["rtic-monotonic"]}
+rp-pico = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic"  }
 panic-halt = "0.2.0"
 embedded-hal ="0.2.7"
 cortex-m-rt = "0.7.1" 
@@ -23,9 +23,9 @@ defmt-rtt = "0.3.2"
 rtic-monotonic = { version = "1.0.0", optional = true }
 
 
-[patch.crates-io]
-rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" , feature = "rp2040-hal/rtic-monotonic" }
-rp-pico = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" }
+#[patch.crates-io]
+#rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" , features = ["rp2040-hal/rtic-monotonic"]}
+#rp-pico = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" }
 
 [dev-dependencies]
 
