--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,20 @@ edition = "2021"
 [dependencies]
 cortex-m-rtic = "1.1.3"
 cortex-m = "0.7.2"
-rp-pico = "0.5.0"
+#rp-pico = "0.5.0"
 panic-halt = "0.2.0"
 embedded-hal ="0.2.7"
 cortex-m-rt = "0.7.1" 
 fugit = "0.3.6"
-rp2040-hal = "0.6.0"
+#rp2040-hal = "0.6.0"
 defmt = "0.3.2"
 defmt-rtt = "0.3.2"
 rp2040-monotonic = "1.1.0"
 systick-monotonic = "1.0.0"
+rtic-monotonic = { version = "1.0.0", optional = true }
+
+rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" , features = ["rtic-monotonic"]}
+rp-pico = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic"  }
 
 [dev-dependencies]
 
