--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,17 @@ fugit = "0.3.6"
 defmt = "0.3.2"
 defmt-rtt = "0.3.2"
 rtic-monotonic = { version = "1.0.0", optional = true }
+libm = "0.2.5"
 
 #rp-pico = "0.5.0"
 #rp2040-hal = "0.6.0"
 rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" , features = ["rtic-monotonic"]}
 rp-pico = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" }
+
+[dependencies.num-traits]
+version = "0.2"
+default-features = false
+features = ["libm"]   
 
 [dev-dependencies]
 
