--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,22 @@ defmt = "0.3.2"
 defmt-rtt = "0.3.2"
 rtic-monotonic = { version = "1.0.0", optional = true }
 libm = "0.2.5"
+serde = { version = "1.0.145", default-features = false, features = ["derive"] } 
+serde-json-core = "0.4.0"
+
 
 #rp-pico = "0.5.0"
 #rp2040-hal = "0.6.0"
-rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" , features = ["rtic-monotonic"]}
-rp-pico = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" }
+
+# --- I used these 2 lines when testing the new rtic-monotonic feature.  Works.---
+#rp2040-hal = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" , features = ["rtic-monotonic"]}
+#rp-pico = { git = "https://github.com/ithinuel/rp-hal", branch = "impl-rtic-monotonic" }
+
+# --- rtic-monotonic is now on github main branch but unreleased? and jannic just modified the UART constructor
+# --- so what should my cargo look like now?
+# --- lines below cause rust-analyzer error
+rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", features = ["rtic-monotonic"]}
+rp-pico = { git = "https://github.com/rp-rs/rp-hal" }
 
 [dependencies.num-traits]
 version = "0.2"
