--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rtic-monotonic = { version = "1.0.0", optional = true }
 libm = "0.2.5"
 serde = { version = "1.0.145", default-features = false, features = ["derive"] } 
 serde-json-core = "0.4.0"
+heapless = "0.7.16"
 
 
 #rp-pico = "0.5.0"
